Fix [Functions] First row Name cell is clipped on expand (#764)

--- a/src/components/Table/table.scss
+++ b/src/components/Table/table.scss
@@ -265,7 +265,7 @@
           .table-body__row {
             &:first-child {
               position: sticky;
-              top: 45px;
+              top: 35px;
               z-index: 1;
               background-color: $white;
 
